--- a/SelfStart/SelfStartFrontEnd/app/templates/rehabplans.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/rehabplans.hbs
@@ -28,6 +28,7 @@
               <p style="float: right; padding-right: 2%;  padding-top: .5%;">{{edit-rehabplan ID=Rehabplan.id}}</p>
               <p style="float: right; padding-right: 30%; ">{{Rehabplan.description}}</p>
             </li>
+            {{list-forms ID=Rehabplan.id plan=Rehabplan}}
 
           {{/each}}
         </ul>
