--- a/SelfStart/SelfStartFrontEnd/app/templates/components/book-appointment.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/book-appointment.hbs
@@ -32,35 +32,54 @@
 
 
 
-{{#ui-modal name= modalName class= modalName}}
-  <form class="cd-form floating-labels" {{action "saveappointment" on="submit"}}>
-    <br><br>
+{{#ui-modal name= modalName class= 'bk'}}
+  <form class="cd-form floating-labels">
     <fieldset>
       <legend>Book Appointment</legend>
       <label class="cd-label"> Physiotherapist</label>
-      <p>{{phyidget.familyName}} {{phyidget.givenName}}</p>
+      <p>{{familyName}} {{givenName}}</p>
+      <br>
+
+      <label class="cd-label">Select Type</label>
+      <p class="cd-select icon">
+        <select class="selectedAppointment" value ={{selectAppointmentType}} onchange={{action "updateTime" value="target.value"}}>
+          <option value=""  selected disabled hidden>Select type</option>
+          <option value="i">
+            Initial Assessment
+          </option>
+          <option value="t">
+            Treatment
+          </option>
+
+        </select>
+      </p>
 
 
       <div class="icon">
         <label class="cd-label">Reason</label>
         {{input class="star" type="text" value = Reason}}
       </div>
+
       <div class="icon">
         <label class="cd-label">Other</label>
         {{input  class="user" type="text" value = Other}}
       </div>
 
-      <div class="icon">
-        <label class="cd-label">Date</label>
-        <p>{{selectedappointment.fulldate}}</p>
-      </div>
+      <label class="cd-label">Select Time Slot</label>
+      <p class="cd-select icon">
+        <select class="people" value ={{selectedTime}} onchange={{action "setselectedtime" value="target.value"}} >
+          <option value=""  selected disabled hidden>Select TimeSlot</option>
+          {{#each timeSlots as |timeslot|}}
+            <option value={{timeslot.time}}>
+              {{timeslot.value}}
+            </option>
+          {{/each}}
+        </select>
+      </p>
 
       <div>
-        <div class="cd-button">
-          <input type="submit" value="Submit">
-        </div>
-
-        <button class="ui fluid negative button" >Cancel</button>
+        <button class="ui fluid negative button" {{action "cancel_appointment"}}>Cancel</button>
+        <button class="ui fluid positive button" {{action "book_appointment"}}>Submit</button>
       </div>
     </fieldset>
 
