--- a/SelfStart/SelfStartFrontEnd/app/templates/rehabplans.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/rehabplans.hbs
@@ -20,22 +20,33 @@
           <li style="text-align: center; font-size: 1.2rem; text-transform: uppercase;
                           font-weight: bold; color: white; background-color: #f58b4c;">Rehabilitation Plan</li>
 
-          {{#each model as |Rehabplan|}}
+          {{#each model.rehabPlan as |Rehabplan|}}
 
             <li>
               {{Rehabplan.planName}}
               <p style="float: right;  padding-top: .5%;">{{delete-rehabplan ID=Rehabplan.id}}</p>
               <p style="float: right; padding-right: 2%;  padding-top: .5%;">{{edit-rehabplan ID=Rehabplan.id}}</p>
-              <p style="float: right; padding-right: 30%; ">{{Rehabplan.description}}</p>
+              <p style="float: right; padding-right: 30%; ">{{Rehabplan.description}} </p>
             </li>
             {{list-forms ID=Rehabplan.id plan=Rehabplan}}
 
           {{/each}}
+
         </ul>
       </div>
 
     </section> <!-- cd-table -->
   </section>
+
+{{#each model.assessmentTest as |assessmentTest|}}
+<div id="assessmentTest">
+                  {{#link-to 'assessment-display'(query-params id=assessmentTest.id)}}
+                    <button class="ui button">View Assessment Test</button>
+                  {{/link-to}}
+  </div>
+{{/each}}
+
+
 
 {{!--
 
